# fget

./: .gitignore  CMakeLists.txt  README.md  args.h  build.sh  download.cpp  download.h  main.cpp
connection/: connection.cpp  connection.h  download.cpp  maxfs.cpp  upload.cpp
crypto/: crypto.cpp  crypto.h
libs/: httplib.cpp  httplib.h
